  * Isolist.ini now points to the final release URLs
  * Allow the uninstaller to delete the directory containing itself by
    running the python code from a different process/location (LP:
    #341605)
  * Added a separate python launcher process, pyrun, in order to support
    XP windows theming, which was a regression from previous commit
    (LP: #341065)
  * Make sure that arguments are properly quoted (thanks Colin Watson!)
  * Before deleting the temp directory, make sure to move out of there
    (LP: #341607)
  * Avoid removing the bcd boot menu multiple times (LP: #354882)
  * Remove wubildr files from each drive
  * Check that file extraction from ISO is successful before trying to
    parse the file (LP: #351966)

  [ Hampus Wessman ]
  * Added a new metalink parser
  * Fixed the check for wine so that it looks in additonal places
  * Added tools/wine to the branch
  * Fixed a bug in virtualdisk.py
  * Added deletion of temporary directory
  * Fixed archive signature search in unpack.c
  * Removed some debugging code

  [ Evan Dandrea ]
  * Fixed a typo in the translation template.
  * Require adminstrator privileges (LP: #340400).  Thanks Agostino Russo!
  * os.environ is a dictionary, not a callable method.
  * Only uncompress files in the boot directory (LP: #341640).  Thanks Agostino
    Russo!
  * Call the correct bootloader installation method for each version of
    Windows.
  * Use registry.{get,set}_value not the nonexistent
    registry.{get,set}_key.
  * Fix typo where a bcdedit command was accidentally created using
    concatenation.
  * subprocess.Popen takes a list of string arguments.
  * Bcdedit requires absolute paths.
  * There's no need to quote arguments to commands when using Popen.  It
    passes them straight through, so you'll get "Ubuntu Linux" instead of
    Ubuntu Linux.
  * Removed an erroneous closing parentheses in the use_cd check.

 -- Agostino Russo <agostino.russo@gmail.com>  Sun, 05 Apr 2009 02:07:04 +0100